--- a/guia.html
+++ b/guia.html
@@ -48,8 +48,31 @@
       font-weight: 700;
       letter-spacing: 1px;
     }
+    .pgp-box {
+      background: var(--neutral);
+      border-radius: 8px;
+      border: 1px solid var(--border);
+      margin: 1.6rem auto 1.2rem auto;
+      max-width: 600px;
+      padding: 1rem 1.1rem;
+      font-size: 0.97rem;
+      color: var(--fg);
+      font-family: var(--font-body);
+    }
+    .pgp-box code {
+      display: block;
+      white-space: pre-wrap;
+      background: #18191b;
+      color: var(--accent);
+      padding: 0.6em;
+      border-radius: 5px;
+      font-size: 0.96em;
+      margin-top: 0.6em;
+      margin-bottom: 0.6em;
+      word-break: break-all;
+    }
     @media (max-width:600px) {
-      .trust-box { padding: 1rem;}
+      .trust-box,.pgp-box { padding: 1rem;}
     }
   </style>
 </head>
@@ -68,12 +91,12 @@
     <section class="hero">
       <div class="hero-title">Guía para Filtrar con Seguridad</div>
       <div class="hero-desc">
-        Envíanos tu filtración de manera rápida y segura. <br>
+        Envíanos tu filtración de manera rápida y segura.<br>
         <a class="cta-rapid" href="https://signal.me/#p/+525512345678" target="_blank">Enviar por Signal ahora</a>
       </div>
       <div class="trust-box">
-        <strong>Tu confianza y anonimato son nuestra prioridad.</strong><br>
-        En Corvus MexiLeaks protegemos tu identidad con protocolos de seguridad rigurosos. No almacenamos datos personales, y jamás compartiremos información que ponga en riesgo a nuestras fuentes.
+        <strong>Protegemos tu identidad y tu confianza.</strong><br>
+        En Corvus MexiLeaks nunca almacenamos datos personales ni revelamos información de nuestras fuentes. Usamos protocolos de seguridad avanzados y cifrado. Nuestra prioridad absoluta es tu anonimato y protección.
       </div>
       <div style="max-width:600px;margin:auto;text-align:left;color:var(--accent);font-size:1.14rem;">
         <p><b>¿Cómo enviar una filtración segura?</b></p>
@@ -88,9 +111,33 @@
           <span style="color:var(--fg);font-weight:600;">¿Listo para filtrar?</span><br>
           <a class="cta-rapid" href="https://signal.me/#p/+525512345678" target="_blank">Enviar filtración por Signal</a>
         </p>
+        <hr style="border:0;border-top:1px solid var(--border);margin:2rem 0;">
+        <p><b>¿Prefieres enviar por correo seguro?</b></p>
+        <ul>
+          <li><b>Usa nuestro correo:</b> <span style="color:var(--silver);">filtraciones@corvusmexileaks.org</span></li>
+          <li><b>Recomendado:</b> Protege tu mensaje usando <b>cifrado PGP</b> (OpenPGP/GPG).</li>
+        </ul>
+        <div class="pgp-box">
+          <b>¿Cómo cifrar tu mensaje con PGP?</b>
+          <ol>
+            <li>Instala una aplicación de correo compatible con PGP (Thunderbird + Enigmail, ProtonMail, etc.) o usa la herramienta <a href="https://www.openpgp.org/software/" target="_blank" style="color:var(--silver);">GPG</a> en tu computadora.</li>
+            <li>Copia nuestra clave pública PGP:</li>
+            <code>
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+Version: OpenPGP.js v4.10.10
+Comment: https://openpgpjs.org
+
+[muestra de clave pública aquí]
+-----END PGP PUBLIC KEY BLOCK-----
+            </code>
+            <li>Importa la clave a tu programa PGP y cifra el mensaje antes de enviarlo al correo de Corvus MexiLeaks.</li>
+            <li>No pongas datos personales en el asunto ni en el cuerpo del correo.</li>
+          </ol>
+          <p>Si tienes dudas sobre cifrado PGP, <a href="contacto.html" style="color:var(--accent);text-decoration:underline;">escríbenos para asesoría técnica</a>.</p>
+        </div>
         <p>
-          También puedes usar nuestro <a href="contacto.html" style="color:var(--silver);">correo seguro</a>.<br>
-          <b>Recuerda:</b> La protección de la fuente es absoluta y garantizada en Corvus MexiLeaks.
+          <b>Tu información será tratada con máxima seguridad y ética periodística.</b><br>
+          La protección de la fuente es absoluta y garantizada en Corvus MexiLeaks.
         </p>
       </div>
     </section>
