--- a/guia.html
+++ b/guia.html
@@ -407,17 +407,13 @@
           <span>󰒃</span>
           Guía Segura
         </a>
-        <a href="contacto.html" class="nav-link">
-          <span>󰍡</span>
-          Contacto
-        </a>
         <a href="mirrors.html" class="nav-link">
           <span>󰐃</span>
           Mirrors
         </a>
         <a href="contacto.html" class="nav-cta">
           <span>󰒃</span>
-          Filtrar Ahora
+          Contactanos Ahora
         </a>
       </div>
       
