--- a/mirrors.html
+++ b/mirrors.html
@@ -372,17 +372,13 @@
           <span>󰒃</span>
           Guía Segura
         </a>
-        <a href="contacto.html" class="nav-link">
-          <span>󰍡</span>
-          Contacto
-        </a>
         <a href="mirrors.html" class="nav-link">
           <span>󰐃</span>
           Mirrors
         </a>
         <a href="contacto.html" class="nav-cta">
           <span>󰒃</span>
-          Filtrar Ahora
+          Contactanos Ahora
         </a>
       </div>
       
@@ -400,17 +396,13 @@
         <span>󰒃</span>
         Guía Segura
       </a>
-      <a href="contacto.html" class="nav-link">
-        <span>󰍡</span>
-        Contacto
-      </a>
       <a href="mirrors.html" class="nav-link">
         <span>󰐃</span>
         Mirrors
       </a>
       <a href="contacto.html" class="nav-cta">
         <span>󰒃</span>
-        Filtrar Ahora
+        Contactanos Ahora
       </a>
     </div>
   </nav>
