--- a/contacto.html
+++ b/contacto.html
@@ -380,12 +380,12 @@
     <div class="contact-container">
       <!-- Hero Section -->
       <section class="contact-hero">
-        <h1 class="contact-title">Contacto Seguro</h1>
-        <p class="contact-subtitle">
-          Múltiples canales de comunicación cifrada para proteger tu anonimato
-        </p>
-      </section>
-
+  <h1 class="contact-title">Contacto Seguro</h1>
+  <p class="contact-subtitle">
+    Puedes contactarnos para colaboraciones, compartir noticias, filtrar información relevante o denunciar casos para su investigación.<br>
+    Protege tu anonimato utilizando nuestros canales cifrados y consulta la <a href="guia.html" style="color:var(--accent-primary);text-decoration:underline;">Guía Segura</a> para enviar información de forma segura.
+  </p>
+</section>
       <!-- Contact Methods -->
       <section class="contact-methods">
         <!-- ProtonMail Method -->
@@ -393,9 +393,10 @@
           <span class="method-icon">󰒃</span>
           <h2 class="method-title">ProtonMail Seguro</h2>
           <p class="method-description">
-            Email alternativo con cifrado automático. No requiere configuración técnica adicional. 
-            Perfecto si prefieres email pero quieres más seguridad que el correo tradicional.
-          </p>
+  Puedes escribirnos directamente para colaborar, compartir una noticia o filtrar información de manera segura.<br>
+  El correo está cifrado automáticamente y no requiere configuración técnica adicional.<br>
+  Ideal para denuncias, evidencias y comunicación confidencial.
+</p>
           
           <div class="method-details">
             <div class="method-contact">corvusleaks@protonmail.com</div>
@@ -503,17 +504,35 @@
             Nunca pediremos ni almacenaremos información personal.
           </p>
         </div>
+        <div class="faq-item">
+  <h3 class="faq-question">
+    <span>󰋗</span>
+    ¿Para qué puedo contactar?
+  </h3>
+  <p class="faq-answer">
+    Puedes ponerte en contacto para colaborar en investigaciones, compartir una noticia importante, filtrar información relevante, o denunciar cualquier caso que consideres necesario investigar. Todas las comunicaciones son confidenciales y protegidas.
+  </p>
+</div>
+<div class="faq-item">
+  <h3 class="faq-question">
+    <span>󰋗</span>
+    ¿Cómo garantizan mi anonimato si quiero filtrar información o denunciar?
+  </h3>
+  <p class="faq-answer">
+    Todos nuestros canales utilizan cifrado extremo a extremo. Te recomendamos seguir los pasos de nuestra <a href="guia.html" style="color:var(--accent-primary);text-decoration:underline;">Guía Segura</a> para enviar información sin riesgos y proteger completamente tu identidad.
+  </p>
+</div>
       </section>
 
       <!-- Final CTA -->
       <section style="text-align: center; margin: 4rem 0;">
         <h2 style="font-family: var(--font-display); font-size: 2rem; margin-bottom: 1rem; color: var(--text-primary);">
-          ¿Tienes información importante?
-        </h2>
-        <p style="color: var(--text-secondary); margin-bottom: 2rem; max-width: 600px; margin-left: auto; margin-right: auto;">
-          No esperes más. Tu filtración puede exponer la corrupción y generar cambios reales en la sociedad. 
-          Estamos aquí para protegerte y amplificar tu voz.
-        </p>
+  ¿Tienes información, una denuncia o quieres colaborar?
+</h2>
+<p style="color: var(--text-secondary); margin-bottom: 2rem; max-width: 600px; margin-left: auto; margin-right: auto;">
+  Tu contacto puede ayudar a exponer la corrupción, sumar a nuevas investigaciones y crear cambios reales. <br>
+  Si quieres proteger tu anonimato, revisa nuestra <a href="guia.html" style="color:var(--accent-primary);text-decoration:underline;">Guía de Seguridad</a> antes de enviar cualquier información.
+</p>
         
         <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
           <a href="guia.html" class="btn btn-secondary">
