--- a/guia.html
+++ b/guia.html
@@ -450,9 +450,9 @@
         <p class="guide-subtitle">
           Aprende cómo enviar filtraciones de forma completamente segura y anónima
         </p>
-        <a href="https://signal.me/#p/+525512345678" class="quick-action" target="_blank">
+        <a href="contacto.html" class="quick-action" target="_blank">
           <span>󰍁</span>
-          Enviar por Signal Ahora
+          Enviar Ahora
         </a>
       </section>
 
