Black, White, and Silver Gray Color Scheme

--- a/noticias/index.html
+++ b/noticias/index.html
@@ -430,20 +430,15 @@
       </section>
 
       <!-- Filters -->
-      <section class="filters">
         <button class="filter-btn active" data-filter="all">
           Todas
-        </button>
-        <button class="filter-btn" data-filter="exclusive">
+        <button class="filter-btn" data-filter="mexico">
+          Noticias México
+        <button class="filter-btn" data-filter="internacional">
+          Noticias Internacionales
+        <button class="filter-btn" data-filter="exclusivas">
           Exclusivas
         </button>
-        <button class="filter-btn" data-filter="analysis">
-          Análisis
-        </button>
-        <button class="filter-btn" data-filter="investigation">
-          Investigaciones
-        </button>
-        <button class="filter-btn" data-filter="recent">
           Recientes
         </button>
       </section>
