--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       
       <div class="hero-actions">
         <a href="contacto.html" class="btn btn-primary">
-          Contactar Redacción
+          Contactar Ahora
         </a>
         <a href="noticias/" class="btn btn-secondary">
           Ver Investigaciones
