Cambiar investigaciones por noticias y crear estructura de feeds

--- a/guia.html
+++ b/guia.html
@@ -399,7 +399,10 @@
       
       <div class="nav-desktop">
         <a href="noticias/" class="nav-link">
-          Investigaciones
+          Noticias
+        </a>
+        <a href="feeds/" class="nav-link">
+          Feeds
         </a>
         <a href="guia.html" class="nav-link">
           Guía Segura
@@ -419,7 +422,10 @@
     
     <div class="nav-mobile" id="nav-mobile">
       <a href="noticias/" class="nav-link">
-        Investigaciones
+        Noticias
+      </a>
+      <a href="feeds/" class="nav-link">
+        Feeds
       </a>
       <a href="guia.html" class="nav-link">
         Guía Segura
@@ -719,7 +725,8 @@ TBzhM8+KE6yCNGnxLVXdU9tTQvxB8sfuTBzhM8+KE6yCNGnxLVXdU9tTQvxB
         </h3>
         <ul>
           <li><a href="mirrors.html">Mirrors Tor</a></li>
-          <li><a href="noticias/">Investigaciones</a></li>
+          <li><a href="noticias/">Noticias</a></li>
+          <li><a href="feeds/">Feeds</a></li>
           <li><a href="index.html">Inicio</a></li>
         </ul>
       </div>
