--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <a href="noticias/" class="nav-link">
           Noticias
         </a>
+        <a href="feeds/" class="nav-link">
+          Feeds
+        </a>
         <a href="#soberania" class="nav-link">
           Soberanía
         </a>
@@ -42,6 +45,9 @@
     <div class="nav-mobile" id="nav-mobile">
       <a href="noticias/" class="nav-link">
         Noticias
+      </a>
+      <a href="feeds/" class="nav-link">
+        Feeds
       </a>
       <a href="#soberania" class="nav-link">
         Soberanía
