--- a/mirrors.html
+++ b/mirrors.html
@@ -364,7 +364,10 @@
       
       <div class="nav-desktop">
         <a href="noticias/" class="nav-link">
-          Investigaciones
+          Noticias
+        </a>
+        <a href="feeds/" class="nav-link">
+          Feeds
         </a>
         <a href="guia.html" class="nav-link">
           Guía Segura
@@ -384,7 +387,10 @@
     
     <div class="nav-mobile" id="nav-mobile">
       <a href="noticias/" class="nav-link">
-        Investigaciones
+        Noticias
+      </a>
+      <a href="feeds/" class="nav-link">
+        Feeds
       </a>
       <a href="guia.html" class="nav-link">
         Guía Segura
@@ -674,6 +680,7 @@
         <ul>
           <li><a href="contacto.html">Contacto Seguro</a></li>
           <li><a href="guia.html">Guía de Seguridad</a></li>
+          <li><a href="noticias/">Noticias</a></li>
           <li><a href="index.html">Inicio</a></li>
         </ul>
       </div>
