--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           Donaciones
         </a>
         <a href="contacto.html" class="nav-cta">
-          Redacción
+          Contacto
         </a>
       </div>
       
