--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       
       <div class="nav-desktop">
         <a href="noticias/" class="nav-link">
-          Noticias
+          Ultimas Noticias
         </a>
         <a href="feeds/" class="nav-link">
-          Feeds
+          Categorias
         </a>
         <a href="#soberania" class="nav-link">
           Soberanía
