--- a/mirrors.html
+++ b/mirrors.html
@@ -387,10 +387,10 @@
     
     <div class="nav-mobile" id="nav-mobile">
       <a href="noticias/" class="nav-link">
-        Noticias
+        Ultimas Noticias
       </a>
       <a href="feeds/" class="nav-link">
-        Feeds
+        Categorias
       </a>
       <a href="guia.html" class="nav-link">
         Guía Segura
