--- a/mirrors.html
+++ b/mirrors.html
@@ -364,10 +364,10 @@
       
       <div class="nav-desktop">
         <a href="noticias/" class="nav-link">
-          Noticias
+          Ultimas Noticias
         </a>
         <a href="feeds/" class="nav-link">
-          Feeds
+          Categorias
         </a>
         <a href="guia.html" class="nav-link">
           Guía Segura
