--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <a href="feeds/" class="nav-link">
           Categorias
         </a>
-        <a href="#soberania" class="nav-link">
-          Soberanía
+        <a href="guia.html" class="nav-link">
+          Guía Segura
         </a>
-        <a href="#donaciones" class="nav-link">
-          Donaciones
+        <a href="mirrors.html" class="nav-link">
+          Mirrors
         </a>
         <a href="contacto.html" class="nav-cta">
           Contacto
