--- a/noticias/index.html
+++ b/noticias/index.html
@@ -372,20 +372,24 @@
       </button>
     </div>
     
-    <div class="nav-mobile" id="nav-mobile">
-      <a href="index.html" class="nav-link">
-        Investigaciones
-      </a>
-      <a href="../guia.html" class="nav-link">
-        Guía Segura
-      </a>
-      <a href="../mirrors.html" class="nav-link">
-        Mirrors
-      </a>
-      <a href="../contacto.html" class="nav-cta">
-        Contacto
-      </a>
-    </div>
+    
+    <div class="nav-desktop">
+        <a href="noticias/" class="nav-link">
+          Ultimas Noticias
+        </a>
+        <a href="feeds/" class="nav-link">
+          Categorias
+        </a>
+        <a href="guia.html" class="nav-link">
+          Guía Segura
+        </a>
+        <a href="mirrors.html" class="nav-link">
+          Mirrors
+        </a>
+        <a href="contacto.html" class="nav-cta">
+          Contacto
+        </a>
+      </div>
   </nav>
 
   <main>
