--- a/feeds/index.html
+++ b/feeds/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Feeds por Categoría · Corvus MexiLeaks</title>
+  <title>Noticias por Categoría · Corvus News</title>
   <meta name="description" content="Noticias organizadas por categorías: Soberanía, Corrupción y Justicia, Internacional y Geopolítica, Crimen Organizado.">
   <link rel="stylesheet" href="../assets/style.css">
   <style>
